--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     qualidade e tecnologia avançada. Trabalhamos com marcas confiáveis para garantir eficiência e durabilidade em 
                     cada item.</p>
                 <div class="div-btn-bloco1">
-                    <a href=""><button>CONVERSE CONOSCO</button></a>
+                    <a href="https://wa.me/73981260129"><button>CONVERSE CONOSCO</button></a>
                 </div>
             </div>
             <div class="div-img">
@@ -78,7 +78,7 @@
                     </div>
                 </div>
                 <div class="div-btn-bloco2">
-                    <a href=""><button>CONVERSE CONOSCO</button></a>
+                    <a href="https://wa.me/73981260129"><button>CONVERSE CONOSCO</button></a>
                 </div>
             </div>
         </div>
@@ -95,7 +95,7 @@
                     <br>
                 </div>
                 <div class="div-btn-bloco3">
-                    <a href=""><button>CONVERSE CONOSCO</button></a>
+                    <a href="https://wa.me/73981260129"><button>CONVERSE CONOSCO</button></a>
                 </div>
             </div>
             <div id="div-bloco2">
@@ -105,13 +105,11 @@
     </div>
     <footer>
         <div id="div-footer1">
-            <h2>CENTRAL SUL</h2>
-           
+            <h2>CENTRAL SUL</h2> 
         </div>
         <div id="div-footer2">
             <div id="div-footer-info-contato">
                 <div class="div-row">
-                    
                         <div id="div-email">
                             <img src="./imagens_modelo/email.png" alt="" id="email">
                             <p>atendimento@centralsul2020.com.br</p>
